src/styles/app/_editor.scss
@use 'sass:map';
@use 'sass:color';
@use '@angular/material' as mat;

@mixin editor-theme($theme) {
  $primary: mat.get-theme-color($theme, primary, 500);
  $warning: mat.get-theme-color($theme, warn, 500);
  $fallback: mat.m2-get-color-from-palette(mat.$m2-amber-palette, 700);
  $bg: mat.get-theme-color($theme, background, background);

  fig-editor {
    & .widgets {
      & mat-icon {
        &.warning {
          color: $warning;
        }

        &.fallback {
          color: $fallback;
        }
      }
    }

    & .panels {
      & .slider {
        &:hover {
          border-right-color: $primary;
        }
      }
    }

    & .mat-mdc-tab-body-wrapper {
      height: 100%;
    }
  }

  #fig-drag-placeholder {
    position: relative;
    pointer-events: none;
    max-width: 360px;
    height: 2px;
    background-color: $primary;

    &[data-direction="before"] {
      top: 0px;
      margin-top: -2px;
    }

    &[data-direction="after"] {
      margin-top: -2px;
    }

    &[data-direction="insert"] {
      height: 38px;
      margin-top: -38px;
      box-sizing: border-box;
      border: 2px solid $primary;
      background-color: color.change($primary, $alpha: 0.10);
    }
  }
}

@mixin editor-color($theme) {
  $primary: mat.get-theme-color($theme, primary, 500);
  $bg: mat.get-theme-color($theme, background, background);

  fig-editor {
    & .panels {
      & .slider {
        &:hover {
          border-right-color: $primary;
        }
      }
    }
  }

  #fig-drag-placeholder {
    background-color: $primary;

    &[data-direction="insert"] {
      border-color: $primary;
      background-color: color.change($primary, $alpha: 0.10);
    }
  }
}

